--- a/fp2020/projects.asciidoc
+++ b/fp2020/projects.asciidoc
@@ -84,7 +84,7 @@ let foo = e =>
 Парсер ReScript, с использованием подхода парсер-комбинаторов
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-На данный момент парсер ReasonML https://github.com/rescript-lang/syntax[написан] методом рекурсивного спуска. Скорее всего от парсер-комбинаторов отказались из-за опасений недостаточной производительности (хотя видео Джонатана Блоу, создателя Braid, я не смотрел). Хочется:
+На данный момент парсер ReScript https://github.com/rescript-lang/syntax[написан] методом рекурсивного спуска. Скорее всего от парсер-комбинаторов отказались из-за опасений недостаточной производительности (хотя видео Джонатана Блоу, создателя Braid, я не смотрел). Хочется:
 
 . Подтвердить или опровергнуть, что парсер-комбинаторы торомозят.
 . Проверять, что с ними писать более удобно не нужно (потому, что это вроде как очевидно).
@@ -103,7 +103,7 @@ let foo = e =>
 . посмотреть на библиотеки парсер-комбинаторов;
 .. https://github.com/inhabitedtype/angstrom[Angstrom]
 .. https://github.com/dboulytchev/ostap/[Ostap] и т.п.
-.. Или какие-то библиотеки, задизайненные специально под ReScript (найдёте сами).
+.. или какие-то библиотеки, задизайненные специально под ReScript (найдёте сами).
 . разобраться с особенностями-недостатками похода: левая рекурсия, longest match first.
 . начать переписывать парсер на основе кодовой базы https://github.com/rescript-lang/syntax[ReScript]
 . готовить текст курсовой записки для зимнего зачета
@@ -121,8 +121,8 @@ let foo = e =>
 
 В результате **не должно** казаться так, что это работа на выходные про "закодить парсер какого-то подмножества ReScript".
 
-. В OCaml/ReScript существует много библиотек парсер-комбинаторов. Студент должен выбрать одну, быть способен обосновать выбор и кратко сказать в чем преимущества и недостатки остальных реализаций парсер-комбинаторов.
-. В используемой библиотеке парсер-комбинаторов может чего-то не хватать, например, может отсутствовать поддержка мемоизации парсер-функций высшего порядка. Если студент доделает и улучшит библиотеку чем-то таким, то это будет плюсом для оценки работы в целом.
+. В OCaml/ReScript существует много библиотек парсер-комбинаторов. Обучающийся должен выбрать одну, быть способен обосновать выбор и кратко сказать в чем преимущества и недостатки остальных реализаций парсер-комбинаторов.
+. В используемой библиотеке парсер-комбинаторов может чего-то не хватать, например, может отсутствовать поддержка мемоизации парсер-функций высшего порядка. Если обучающийся доделает и улучшит библиотеку чем-то таким, то это будет плюсом для оценки работы в целом.
 . Если в процессе работы будет поддержан весь ReScript, т.е. можно будет заменить парсер в компиляторе ReScript и собрать некоторое количество пакетов с ним, то это тоже будет плюсом.
 . Если новый парсер будет
   .. занимать меньше строк
