--- a/papers/matching2020/heading.tex
+++ b/papers/matching2020/heading.tex
@@ -4,6 +4,8 @@
 \setbeamertemplate{navigation symbols}{}
 % get rid of footer
 %\setbeamertemplate{footline}{}
+%\setbeamertemplate{note page}[plain]
+%\setbeameroption{show notes on second screen=right}
 
 \usepackage{xcolor}
 \definecolor{YellowGreen} {HTML}{B5C28C}
