--- a/papers/pfds/chapter03.tex
+++ b/papers/pfds/chapter03.tex
@@ -1,4 +1,4 @@
-\begin{frame}[fragile]{Устойчивоcть (persistence)}
+\begin{frame}{Устойчивоcть (persistence)}
 Отличительной особенностью функциональных структур данных является то,
 что они всегда \term{устойчивы}{persistent}~--- обновление
 функциональной структуры не уничтожает старую версию, а создает
